fix: refactor js file and decreased letter spacing in css

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ input[type="number"] {
 
 label {
   font-size: 0.7em;
-  letter-spacing: 0.4em;
+  letter-spacing: 0.2em;
 }
 
 span {
